--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/Global_Styles.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap" rel="stylesheet">
+    <title>Bienvenido</title>
 </head>
 <body>
-    
+
 </body>
 </html>
