Mejoras menores menu de inicio

--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles -->
-    <link rel="stylesheet" href="css/Global_Styles.css">
+    <link rel="stylesheet" href="css/Buttom_start.css">
+    <link rel="stylesheet" href="css/Background-start.css">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap" rel="stylesheet">
     <title>Bienvenido</title>
 </head>
 <body>
-
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident enim asperiores vel quisquam quod sequi repellendus expedita. A ea eos incidunt fugit quo qui minima autem! Distinctio culpa quas earum.</p>
+    <div class="container">
+        <button>
+            <span class="text">Button</span>
+        </button>
+    </div>
 </body>
 </html>
