pagina principal terminada

--- a/Index.html
+++ b/Index.html
@@ -7,15 +7,21 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/Buttom_start.css">
     <link rel="stylesheet" href="css/Background-start.css">
+    <link rel="stylesheet" href="css/Efect-write.css">
+    <!-- JS -->
     <!-- Fonts -->
     <title>Bienvenido</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident enim asperiores vel quisquam quod sequi repellendus expedita. A ea eos incidunt fugit quo qui minima autem! Distinctio culpa quas earum.</p>
+    <p class="test" id="typing-text"></p>
+    
     <div class="container">
-        <button>
-            <span class="text">Button</span>
+        <button onclick="redirijir()">
+            <span class="text">Comenzar</span>
         </button>
     </div>
+    
+    <script src="js/typing.js"></script>
+    <script src="js/Redirect.js"></script>
 </body>
 </html>
